background on mobile fix attempt

--- a/style.css
+++ b/style.css
@@ -13,39 +13,39 @@ body {
 }
 
 #bg-video {
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  min-width: 100%;
-  object-fit: cover;
-  z-index: -1;
-  animation: playReverse 10s linear infinite alternate;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
+    overflow: hidden;
+    animation: playReverse 10s linear infinite alternate;
 }
+
 
 #ttitle {
-  position: relative;
-  left: 0;
-  /*transition: left 0.5s ease, transform 0.5s ease;*/
-  text-align: left; /* для мобільних маленьких екранів */
-}
-
-/* якщо ширина > 700px */
-@media (min-width: 701px) {
-  #ttitle {
+    position: relative;
     left: 0;
-    /*transform: translateX(-50%);*/
-    text-align: center;
-  }
-}
-
-/* якщо ширина <= 700px */
-@media (max-width: 700px) {
-  #ttitle {
-    left: 0;
-    /*transform: none;*/
+    /*transition: left 0.5s ease, transform 0.5s ease;*/
     text-align: left;
-  }
+}
+
+@media (min-width: 701px) {
+    #ttitle {
+        left: 0;
+        /*transform: translateX(-50%);*/
+        text-align: center;
+    }
+}
+
+@media (max-width: 700px) {
+    #ttitle {
+        left: 0;
+        /*transform: none;*/
+        text-align: left;
+    }
 }
 
 h1 {
